Add missing apache-foreground scripts, swap ssl version for 5.6 on stretch

--- a/5.6/stretch/cli/Dockerfile
+++ b/5.6/stretch/cli/Dockerfile
@@ -107,7 +107,7 @@ RUN set -eux; \
 		libcurl4-openssl-dev \
 		libedit-dev \
 		libsqlite3-dev \
-		libssl-dev \
+		libssl1.0-dev \
 		libxml2-dev \
 		zlib1g-dev \
 		${PHP_EXTRA_BUILD_DEPS:-} \
