--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,16 @@ language: bash
 services: docker
 
 env:
+  - VERSION=7.3-rc VARIANT=stretch/cli
+  - VERSION=7.3-rc VARIANT=stretch/apache
+  - VERSION=7.3-rc VARIANT=stretch/fpm
+  - VERSION=7.3-rc VARIANT=stretch/zts
+  - VERSION=7.3-rc VARIANT=alpine3.7/cli
+  - VERSION=7.3-rc VARIANT=alpine3.7/fpm
+  - VERSION=7.3-rc VARIANT=alpine3.7/zts
+  - VERSION=7.3-rc VARIANT=alpine3.6/cli
+  - VERSION=7.3-rc VARIANT=alpine3.6/fpm
+  - VERSION=7.3-rc VARIANT=alpine3.6/zts
   - VERSION=7.2 VARIANT=stretch/cli
   - VERSION=7.2 VARIANT=stretch/apache
   - VERSION=7.2 VARIANT=stretch/fpm
