--- a/7.3-rc/stretch/cli/Dockerfile
+++ b/7.3-rc/stretch/cli/Dockerfile
@@ -15,6 +15,25 @@ RUN set -eux; \
 		echo 'Pin-Priority: -1'; \
 	} > /etc/apt/preferences.d/no-debian-php
 
+# Argon2-Start
+RUN	set -eux; \
+	{ \
+		echo 'deb http://deb.debian.org/debian buster main'; \
+		echo 'deb http://deb.debian.org/debian buster-updates main'; \
+		echo 'deb http://security.debian.org buster/updates main'; \
+	} >> /etc/apt/sources.list; \
+	{ \
+		echo 'Package: *'; \
+		echo 'Pin: release n=buster'; \
+		echo 'Pin-Priority: 100'; \
+	} > /etc/apt/preferences.d/no-buster; \
+	{ \
+		echo 'Package: libargon2-0*'; \
+		echo 'Pin: release n=buster'; \
+		echo 'Pin-Priority: 990'; \
+	} > /etc/apt/preferences.d/argon-buster
+# Argon2-End
+
 # dependencies required for running "phpize"
 # (see persistent deps below)
 ENV PHPIZE_DEPS \
@@ -105,7 +124,9 @@ RUN set -eux; \
 	savedAptMark="$(apt-mark showmanual)"; \
 	apt-get update; \
 	apt-get install -y --no-install-recommends \
+# Argon2-Start
 		libargon2-0-dev \
+# Argon2-End
 		libcurl4-openssl-dev \
 		libedit-dev \
 		libsodium-dev \
@@ -147,8 +168,10 @@ RUN set -eux; \
 		--enable-mbstring \
 # --enable-mysqlnd is included here because it's harder to compile after the fact than extensions are (since it's a plugin for several extensions, not an extension in itself)
 		--enable-mysqlnd \
+# Argon2-Start
 # https://wiki.php.net/rfc/argon2_password_hash (7.2+)
 		--with-password-argon2 \
+# Argon2-End
 # https://wiki.php.net/rfc/libsodium
 		--with-sodium=shared \
 		\
