--- a/Dockerfile-alpine.template
+++ b/Dockerfile-alpine.template
@@ -92,6 +92,9 @@ RUN set -xe \
 		$PHPIZE_DEPS \
 		coreutils \
 		curl-dev \
+# Argon2-Start
+		argon2-dev \
+# Argon2-End
 		libedit-dev \
 		libressl-dev \
 		libsodium-dev \
@@ -121,6 +124,10 @@ RUN set -xe \
 		--enable-mbstring \
 # --enable-mysqlnd is included here because it's harder to compile after the fact than extensions are (since it's a plugin for several extensions, not an extension in itself)
 		--enable-mysqlnd \
+# Argon2-Start
+# https://wiki.php.net/rfc/argon2_password_hash (7.2+)
+		--with-password-argon2 \
+# Argon2-End
 # https://wiki.php.net/rfc/libsodium
 		--with-sodium=shared \
 		\
