--- a/7.3-rc/alpine3.8/zts/Dockerfile
+++ b/7.3-rc/alpine3.8/zts/Dockerfile
@@ -99,6 +99,7 @@ RUN set -xe \
 		$PHPIZE_DEPS \
 		coreutils \
 		curl-dev \
+		argon2-dev \
 		libedit-dev \
 		libressl-dev \
 		libsodium-dev \
@@ -128,6 +129,8 @@ RUN set -xe \
 		--enable-mbstring \
 # --enable-mysqlnd is included here because it's harder to compile after the fact than extensions are (since it's a plugin for several extensions, not an extension in itself)
 		--enable-mysqlnd \
+# https://wiki.php.net/rfc/argon2_password_hash (7.2+)
+		--with-password-argon2 \
 # https://wiki.php.net/rfc/libsodium
 		--with-sodium=shared \
 		\
