--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ env:
   - VERSION=7.2 VARIANT=stretch/apache
   - VERSION=7.2 VARIANT=stretch/fpm
   - VERSION=7.2 VARIANT=stretch/zts
+  - VERSION=7.2 VARIANT=alpine3.8/cli
+  - VERSION=7.2 VARIANT=alpine3.8/fpm
+  - VERSION=7.2 VARIANT=alpine3.8/zts
   - VERSION=7.2 VARIANT=alpine3.7/cli
   - VERSION=7.2 VARIANT=alpine3.7/fpm
   - VERSION=7.2 VARIANT=alpine3.7/zts
