--- a/Dockerfile-debian.template
+++ b/Dockerfile-debian.template
@@ -1,4 +1,4 @@
-FROM debian:%%DEBIAN_SUITE%%
+FROM debian:%%DEBIAN_TAG%%
 
 # prevent Debian's PHP packages from being installed
 # https://github.com/docker-library/php/pull/542
@@ -8,23 +8,6 @@ RUN set -eux; \
 		echo 'Pin: release *'; \
 		echo 'Pin-Priority: -1'; \
 	} > /etc/apt/preferences.d/no-debian-php
-
-# Argon2-Start
-RUN	set -eux; \
-	{ \
-		echo 'deb http://deb.debian.org/debian sid main'; \
-	} >> /etc/apt/sources.list; \
-	{ \
-		echo 'Package: *'; \
-		echo 'Pin: release n=sid'; \
-		echo 'Pin-Priority: 100'; \
-	} > /etc/apt/preferences.d/no-sid; \
-	{ \
-		echo 'Package: libargon2*'; \
-		echo 'Pin: release n=sid'; \
-		echo 'Pin-Priority: 990'; \
-	} > /etc/apt/preferences.d/argon-sid
-# Argon2-End
 
 # dependencies required for running "phpize"
 # (see persistent deps below)
@@ -116,9 +99,6 @@ RUN set -eux; \
 	savedAptMark="$(apt-mark showmanual)"; \
 	apt-get update; \
 	apt-get install -y --no-install-recommends \
-# Argon2-Start
-		libargon2-dev \
-# Argon2-End
 		libcurl4-openssl-dev \
 		libedit-dev \
 		libsodium-dev \
@@ -128,6 +108,20 @@ RUN set -eux; \
 		zlib1g-dev \
 		${PHP_EXTRA_BUILD_DEPS:-} \
 	; \
+##<argon2>##
+	sed -e 's/%%DEBIAN_SUITE%%/buster/g' /etc/apt/sources.list > /etc/apt/sources.list.d/buster.list; \
+	{ \
+		echo 'Package: *'; \
+		echo 'Pin: release n=buster'; \
+		echo 'Pin-Priority: -10'; \
+		echo; \
+		echo 'Package: libargon2*'; \
+		echo 'Pin: release n=buster'; \
+		echo 'Pin-Priority: 990'; \
+	} > /etc/apt/preferences.d/argon2-buster; \
+	apt-get update; \
+	apt-get install -y --no-install-recommends libargon2-dev; \
+##</argon2>##
 	rm -rf /var/lib/apt/lists/*; \
 	\
 	export \
@@ -160,10 +154,8 @@ RUN set -eux; \
 		--enable-mbstring \
 # --enable-mysqlnd is included here because it's harder to compile after the fact than extensions are (since it's a plugin for several extensions, not an extension in itself)
 		--enable-mysqlnd \
-# Argon2-Start
 # https://wiki.php.net/rfc/argon2_password_hash (7.2+)
 		--with-password-argon2 \
-# Argon2-End
 # https://wiki.php.net/rfc/libsodium
 		--with-sodium=shared \
 		\
