Add more Alpine 3.8 variants

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,9 @@ env:
   - VERSION=7.1 VARIANT=jessie/apache
   - VERSION=7.1 VARIANT=jessie/fpm
   - VERSION=7.1 VARIANT=jessie/zts
+  - VERSION=7.1 VARIANT=alpine3.8/cli
+  - VERSION=7.1 VARIANT=alpine3.8/fpm
+  - VERSION=7.1 VARIANT=alpine3.8/zts
   - VERSION=7.1 VARIANT=alpine3.7/cli
   - VERSION=7.1 VARIANT=alpine3.7/fpm
   - VERSION=7.1 VARIANT=alpine3.7/zts
@@ -41,6 +44,9 @@ env:
   - VERSION=7.0 VARIANT=jessie/apache
   - VERSION=7.0 VARIANT=jessie/fpm
   - VERSION=7.0 VARIANT=jessie/zts
+  - VERSION=7.0 VARIANT=alpine3.8/cli
+  - VERSION=7.0 VARIANT=alpine3.8/fpm
+  - VERSION=7.0 VARIANT=alpine3.8/zts
   - VERSION=7.0 VARIANT=alpine3.7/cli
   - VERSION=7.0 VARIANT=alpine3.7/fpm
   - VERSION=7.0 VARIANT=alpine3.7/zts
@@ -52,6 +58,9 @@ env:
   - VERSION=5.6 VARIANT=jessie/apache
   - VERSION=5.6 VARIANT=jessie/fpm
   - VERSION=5.6 VARIANT=jessie/zts
+  - VERSION=5.6 VARIANT=alpine3.8/cli
+  - VERSION=5.6 VARIANT=alpine3.8/fpm
+  - VERSION=5.6 VARIANT=alpine3.8/zts
   - VERSION=5.6 VARIANT=alpine3.7/cli
   - VERSION=5.6 VARIANT=alpine3.7/fpm
   - VERSION=5.6 VARIANT=alpine3.7/zts
