Add Alpine 3.9 variant

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ env:
   - VERSION=7.3 VARIANT=stretch/apache
   - VERSION=7.3 VARIANT=stretch/fpm
   - VERSION=7.3 VARIANT=stretch/zts
+  - VERSION=7.3 VARIANT=alpine3.9/cli
+  - VERSION=7.3 VARIANT=alpine3.9/fpm
+  - VERSION=7.3 VARIANT=alpine3.9/zts
   - VERSION=7.3 VARIANT=alpine3.8/cli
   - VERSION=7.3 VARIANT=alpine3.8/fpm
   - VERSION=7.3 VARIANT=alpine3.8/zts
@@ -13,6 +16,9 @@ env:
   - VERSION=7.2 VARIANT=stretch/apache
   - VERSION=7.2 VARIANT=stretch/fpm
   - VERSION=7.2 VARIANT=stretch/zts
+  - VERSION=7.2 VARIANT=alpine3.9/cli
+  - VERSION=7.2 VARIANT=alpine3.9/fpm
+  - VERSION=7.2 VARIANT=alpine3.9/zts
   - VERSION=7.2 VARIANT=alpine3.8/cli
   - VERSION=7.2 VARIANT=alpine3.8/fpm
   - VERSION=7.2 VARIANT=alpine3.8/zts
@@ -24,6 +30,9 @@ env:
   - VERSION=7.1 VARIANT=jessie/apache
   - VERSION=7.1 VARIANT=jessie/fpm
   - VERSION=7.1 VARIANT=jessie/zts
+  - VERSION=7.1 VARIANT=alpine3.9/cli
+  - VERSION=7.1 VARIANT=alpine3.9/fpm
+  - VERSION=7.1 VARIANT=alpine3.9/zts
   - VERSION=7.1 VARIANT=alpine3.8/cli
   - VERSION=7.1 VARIANT=alpine3.8/fpm
   - VERSION=7.1 VARIANT=alpine3.8/zts
