--- a/7.4-rc/stretch/zts/Dockerfile
+++ b/7.4-rc/stretch/zts/Dockerfile
@@ -114,6 +114,7 @@ RUN set -eux; \
 	apt-get install -y --no-install-recommends \
 		libcurl4-openssl-dev \
 		libedit-dev \
+		libonig-dev \
 		libsodium-dev \
 		libsqlite3-dev \
 		libssl-dev \
@@ -209,11 +210,8 @@ RUN set -eux; \
 	; \
 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; \
 	\
-	php --version; \
-	\
-# https://github.com/docker-library/php/issues/443
-	pecl update-channels; \
-	rm -rf /tmp/pear ~/.pearrc
+# smoke test
+	php --version
 
 COPY docker-php-ext-* docker-php-entrypoint /usr/local/bin/
 
