Keep "pecl update-channels" for 8.0 also

--- a/8.0/alpine3.12/cli/Dockerfile
+++ b/8.0/alpine3.12/cli/Dockerfile
@@ -176,6 +176,10 @@ RUN set -eux; \
 	\
 	apk del --no-network .build-deps; \
 	\
+# update pecl channel definitions https://github.com/docker-library/php/issues/443
+	pecl update-channels; \
+	rm -rf /tmp/pear ~/.pearrc; \
+	\
 # smoke test
 	php --version
 
