--- a/8.2-rc/buster/cli/Dockerfile
+++ b/8.2-rc/buster/cli/Dockerfile
@@ -60,9 +60,9 @@ ENV PHP_LDFLAGS="-Wl,-O1 -pie"
 
 ENV GPG_KEYS 39B641343D8C104B2B146DC3F9C39DC0B9698544 E60913E4DF209907D8E30D96659A97C9CF2A795A 1198C0117593497A5EC5C199286AF1F9897469DC
 
-ENV PHP_VERSION 8.2.0beta1
-ENV PHP_URL="https://downloads.php.net/~pierrick/php-8.2.0beta1.tar.xz" PHP_ASC_URL="https://downloads.php.net/~pierrick/php-8.2.0beta1.tar.xz.asc"
-ENV PHP_SHA256="46ebb4be04b98833bab649314775cc100bdd825c73d9bc3646df5c1ec7ebb2a6"
+ENV PHP_VERSION 8.2.0beta2
+ENV PHP_URL="https://downloads.php.net/~sergey/php-8.2.0beta2.tar.xz" PHP_ASC_URL="https://downloads.php.net/~sergey/php-8.2.0beta2.tar.xz.asc"
+ENV PHP_SHA256="cffb46d5458b52e93876584c77631620003e420cbe119fe864925fca188e01bd"
 
 RUN set -eux; \
 	\
